kubernetes/apps/production/searxng/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: public-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:2024.9.23-6be56aee1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: searxng-config-volume
              mountPath: /etc/searxng/limiter.toml
              subPath: limiter.toml
            - name: searxng-config-volume
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: searxng-config-volume
          configMap:
            name: searxng-config
