kubernetes/apps/production/searxng/redis-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: searxng-redis
  namespace: public-services
spec:
  containers:
    - name: redis
      image: docker.io/valkey/valkey:8-alpine
      command: ["valkey-server", "--save", "30", "1", "--loglevel", "warning"]
      volumeMounts:
        - name: redis-data
          mountPath: /data
      resources:
        limits:
          memory: "256Mi"
          cpu: "500m"
      restartPolicy: Always
  volumes:
    - name: redis-data
      persistentVolumeClaim:
        claimName: searxng-redis-pvc
