kubernetes/apps/production/searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: public-services
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: searxng
